Bug 1338779 - Handle characters map across Latin1 and non-Latin1 properly in TextNode. r=till